--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon dist",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "compile": "tsc",
+    "pull": "git pull"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "eslint": "^7.19.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
     "discord.js": "discordjs/discord.js",
     "dotenv": "^8.2.0"
