feat(commands): add purge, bean commands
* chore(banneCommand): formatting

* chore(eslint): change from YAML to JSON

* feat(messageEvent)?: add aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "skipLibCheck": true,
     "strict": true,
     "moduleResolution": "node",
-    "module": "commonjs"
+    "module": "commonjs",
+    "experimentalDecorators": true
   },
   "include": ["src/**/*"],
   "compileOnSave": false,
