--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.19.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
-    "discord.js": "discordjs/discord.js",
+    "discord.js": "github:nearlySplat/discord.js",
     "dotenv": "^8.2.0"
   },
   "type": "commonjs"
