--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/eslint": "^7.2.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.19.0"
+    "eslint": "^7.20.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
-    "discord.js": "github:nearlySplat/discord.js",
-    "dotenv": "^8.2.0"
+    "discord.js": "nearlySplat/discord.js",
+    "dotenv": "^8.2.0",
+    "typescript": "^4.2.2"
   },
   "type": "commonjs"
 }
