monkeypatch: undefinition error in eslint and eval

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "prefer-arrow-callback": "warn",
-    "multiline-ternary": "error"
+    "multiline-ternary": "error",
+    "no-undef": "warn"
   }
 }
