--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^7.20.0"
   },
   "dependencies": {
+    "@types/node": "^14.14.31",
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
     "discord.js": "nearlySplat/discord.js",
