--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightbulb",
-  "version": "1.10.6",
+  "version": "1.11.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,11 +18,16 @@
     "eslint": "^7.20.0"
   },
   "dependencies": {
+    "@discordjs/collection": "^0.1.6",
+    "@types/graceful-fs": "^4.1.5",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.31",
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
     "discord.js": "nearlySplat/discord.js",
     "dotenv": "^8.2.0",
+    "graceful-fs": "^4.2.6",
+    "lodash": "^4.17.21",
     "typescript": "^4.2.2"
   },
   "type": "commonjs"
