--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon dist",
     "watch": "tsc -w",
     "compile": "tsc",
-    "pull": "git pull"
+    "pull": "git pull",
+    "run": "if pm2 ls | grep lightbulb; pm2 restart lightbulb; else; node dist; end"
   },
   "author": "",
   "license": "ISC",
