--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "moduleResolution": "node",
     "module": "CommonJS",
     "experimentalDecorators": true,
-    "strictNullChecks": true,
+    "emitDecoratorMetadata": true,
+    "strictNullChecks": false,
     "useDefineForClassFields": true,
     "esModuleInterop": true,
     "newLine": "lf",
