--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@discordjs/collection": "^0.1.6",
     "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.37",
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
     "discord.js": "nearlySplat/discord.js",
     "dotenv": "^8.2.0",
     "graceful-fs": "^4.2.6",
     "lodash": "^4.17.21",
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.31",
     "typescript": "^4.2.2"
   },
   "type": "commonjs"
