--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "husky": "^5.2.0"
   },
   "dependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@discordjs/collection": "^0.1.6",
     "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
@@ -35,5 +37,10 @@
     "typeorm": "^0.2.31",
     "typescript": "^4.2.2"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
