--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pull": "git pull",
     "run": "pm2 restart lightbulb",
     "prepare": "husky install",
-    "format": "fish scripts/format.fish"
+    "format": "fish scripts/format.fish",
+    "commit": "cz"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "@types/eslint": "^7.2.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.20.0",
     "husky": "^5.2.0"
   },
@@ -42,6 +44,11 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
