--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@discordjs/collection": "^0.1.6",
+    "@splatterxl/fetchbuilder": "^0.1.0",
     "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
