--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "run": "pm2 restart lightbulb",
     "prepare": "husky install",
     "format": "fish scripts/format.fish",
-    "commit": "cz"
+    "commit": "cz",
+    "license": "fish scripts/licenser.fish"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +28,7 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@discordjs/collection": "^0.1.6",
-    "@splatterxl/fetchbuilder": "^0.1.0",
+    "@splatterxl/fetchbuilder": "^0.1.1-1",
     "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
