--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "useDefineForClassFields": true,
     "esModuleInterop": true,
     "newLine": "lf",
-    "pretty": true
+    "pretty": true,
+    "diagnostics": true,
+    "extendedDiagnostics": true
   },
   "include": ["src/**/*"],
   "compileOnSave": false,
