--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ node_modules/
 yarn.lock
 *.code-workspace
 src/modules/config.json
-src/modules/markov.json
 src/modules/markov.txt
 src/migration/* 
 
+
+pnpm-lock.yaml
+src/util/tags.json
