--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/eslint": "^7.2.6",
+    "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "cz-conventional-changelog": "3.3.0",
@@ -30,15 +31,15 @@
     "@discordjs/collection": "^0.1.6",
     "@splatterxl/fetchbuilder": "^0.1.1-1",
     "@types/graceful-fs": "^4.1.5",
-    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
-    "discord.js": "nearlySplat/discord.js",
+    "discord.js": "github:nearlySplat/discord.js",
     "dotenv": "^8.2.0",
     "graceful-fs": "^4.2.6",
     "lodash": "^4.17.21",
     "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.2"
   },
