--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@commitlint/config-conventional": "^12.0.1",
     "@discordjs/collection": "^0.1.6",
     "@splatterxl/fetchbuilder": "^0.1.1-1",
+    "@splatterxl/tsconfig": "^1.0.0",
     "@types/graceful-fs": "^4.1.5",
     "@types/node": "^14.14.37",
     "axios": "^0.21.1",
