--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "commitlint": "^12.1.1",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.20.0",
     "husky": "^5.2.0"
