--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "yaml": "^1.10.2"
   },
   "type": "commonjs",
   "husky": {
