--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightbulb",
-  "version": "1.22.0",
+  "version": "1.24.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,33 +17,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/eslint": "^7.2.6",
+    "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
+    "@types/node": "^14.17.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "commitlint": "^12.1.1",
+    "commitlint": "^12.1.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.20.0",
-    "husky": "^5.2.0"
+    "husky": "^5.2.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
     "@discordjs/collection": "^0.1.6",
     "@splatterxl/fetchbuilder": "^0.1.1-1",
     "@splatterxl/tsconfig": "^1.0.0",
-    "@types/graceful-fs": "^4.1.5",
-    "@types/node": "^14.14.37",
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
-    "discord.js": "github:nearlySplat/discord.js",
+    "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
     "graceful-fs": "^4.2.6",
     "lodash": "^4.17.21",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
-    "typescript": "^4.2.2",
     "yaml": "^1.10.2"
   },
   "type": "commonjs",
