fix: fix some errors in chess

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  "compilerOptions": { "rootDir": "./src", "outDir": "./dist" },
+  "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "target": "esnext"
+  },
   "include": ["src/**/*"],
   "compileOnSave": false,
   "exclude": ["dist/**"],
