--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightbulb",
-  "version": "1.27.0",
+  "version": "1.28.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/chess.js": "^0.11.0",
     "@types/eslint": "^7.2.6",
     "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.17.1",
+    "@types/punycode": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "commitlint": "^12.1.4",
@@ -36,17 +38,21 @@
     "@discordjs/collection": "^0.1.6",
     "@splatterxl/fetchbuilder": "^0.1.1-1",
     "@splatterxl/tsconfig": "^1.0.0",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
     "chess-image-generator": "github:nearlySplat/chess-image-generator",
+    "chess.js": "^0.12.0",
     "discord-api-types": "^0.18.1",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
     "graceful-fs": "^4.2.6",
     "lodash": "^4.17.21",
     "pg": "^8.5.1",
+    "punycode": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
+    "uuid": "^8.3.2",
     "yaml": "^1.10.2"
   },
   "type": "commonjs",
