--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "target": "esnext"
+    "target": "esnext",
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
   "compileOnSave": false,
