--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ dist/
 node_modules/
 yarn.lock
 *.code-workspace
-src/migration/* 
-
-
+src/migration/
 pnpm-lock.yaml
 etc/
 !etc/config.yml.example
