--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,11 +1,7 @@
 
 name: Compile Code
 on:
-  push:
-    branches:
-      - master
-    tags:
-      - "*"
+  - push
 jobs:
   docs:
     name: Compile
