--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           version: 6.0.2
           run_install: true
+      - name: Install latest discord.js version
+        run: pnpm i discord.js@dev
 
       - name: Compile code
         run: pnpx tsc -p tsconfig.json
