--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,9 @@
-name: Compile Code
+name: Lint code
 on:
   - push
 jobs:
   docs:
-    name: Compile
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -19,8 +19,11 @@ jobs:
         with:
           version: 6.0.2
           run_install: true
-      - name: Install latest discord.js version
-        run: pnpm i discord.js@dev
 
       - name: Compile code
         run: pnpx tsc -p tsconfig.json
+
+      - name: Lint code
+        run: pnpx eslint . --ext .ts
+
+
