--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.17.1",
+    "@types/node-fetch": "^2.5.10",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "commitlint": "^12.1.4",
