--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.20.0",
     "husky": "^7.0.0",
+    "nodemon": "^2.0.9",
     "typescript": "^4.3.2"
   },
   "dependencies": {
@@ -42,8 +43,8 @@
     "cat-loggr": "^1.1.0",
     "chess-image-generator": "github:andyruwruw/chess-image-generator",
     "chess.js": "^0.12.0",
-    "discord-api-types": "^0.18.1",
-    "discord.js": "^13.0.0-dev.64f093f.1625054868",
+    "discord-api-types": "^0.19.0-next.f393ba520d7d6d2aacaca7b3ca5d355fab614f6e",
+    "discord.js": "^13.0.0-dev.fe6cc0c.1625227356",
     "dotenv": "^10.0.0",
     "graceful-fs": "^4.2.6",
     "lodash": "^4.17.21",
