--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ yarn.lock
 *.code-workspace
 src/migration/
 pnpm-lock.yaml
-etc/
-!etc/config.yml.example
+etc/tags.json
+etc/markov.txt
+etc/config.yml
