--- a/package.json
+++ b/package.json
@@ -41,19 +41,18 @@
     "@splatterxl/fetchbuilder": "^0.1.1-1",
     "axios": "^0.21.1",
     "cat-loggr": "^1.1.0",
+    "chalk": "^4.1.1",
     "chess-image-generator": "github:andyruwruw/chess-image-generator",
     "chess.js": "^0.12.0",
-    "discord-api-types": "^0.19.0-next.f393ba520d7d6d2aacaca7b3ca5d355fab614f6e",
-    "discord.js": "^13.0.0-dev.fe6cc0c.1625227356",
+    "discord-api-types": "^0.19.0-next.836e8fb.1625360346",
+    "discord.js": "^13.0.0-dev.ab0b3b9.1625400166",
     "dotenv": "^10.0.0",
     "graceful-fs": "^4.2.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "mongoose": "^5.13.1",
     "node-fetch": "^2.6.1",
-    "pg": "^8.5.1",
-    "reflect-metadata": "^0.1.13",
     "statcord.js": "^3.2.0",
-    "typeorm": "^0.2.31",
     "yaml": "^1.10.2"
   },
   "type": "commonjs",
