--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@splatterxl/tsconfig": "^1.0.0",
     "@types/chess.js": "^0.11.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/eslint": "^7.2.6",
+    "@types/express": "^4.17.13",
     "@types/graceful-fs": "^4.1.5",
     "@types/lodash": "^4.14.168",
     "@types/node": "^16.0.0",
@@ -44,9 +46,12 @@
     "chalk": "^4.1.1",
     "chess-image-generator": "github:andyruwruw/chess-image-generator",
     "chess.js": "^0.12.0",
+    "cookie-parser": "^1.4.5",
     "discord-api-types": "^0.19.0-next.836e8fb.1625360346",
     "discord.js": "^13.0.0-dev.ab0b3b9.1625400166",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "graceful-fs": "^4.2.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
