--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightbulb",
-  "version": "1.38.0",
+  "version": "1.42.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -49,7 +49,7 @@
     "chess.js": "^0.12.0",
     "cookie-parser": "^1.4.5",
     "discord-api-types": "^0.19.0-next.836e8fb.1625360346",
-    "discord.js": "^13.0.0-dev.ab0b3b9.1625400166",
+    "discord.js": "github:discordjs/discord.js#281072be4488cba05f4db6c5cd6c7e3c49a9380f",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
