--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "chess-image-generator": "github:andyruwruw/chess-image-generator",
     "chess.js": "^0.12.0",
     "cookie-parser": "^1.4.5",
-    "discord-api-types": "^0.19.0-next.836e8fb.1625360346",
-    "discord.js": "github:discordjs/discord.js#281072be4488cba05f4db6c5cd6c7e3c49a9380f",
+    "discord-api-types": "^0.19.0-next.4a83629.1625920061",
+    "discord.js": "^13.0.0-dev.d6c43a5.1625918569",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -61,15 +61,5 @@
     "statcord.js": "^3.2.0",
     "yaml": "^1.10.2"
   },
-  "type": "commonjs",
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  }
+  "type": "commonjs"
 }
