only deploy to sentry on push to rewrite/development

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
 name: Deploy to all services that need deployment
 
 on:
-  - push
+  push:
+    branches: 
+      - "rewrite"
+      - "development"
 
 jobs:
   sentry:
