rename deploy.yml to sentry-release.yml (yaml was freaking out)

--- a/.github/workflows/sentry-release.yml
+++ b/.github/workflows/sentry-release.yml
@@ -1,4 +1,4 @@
-name: Deploy to all services that need deployment
+name: Sentry release
 
 on:
   push:
@@ -18,6 +18,5 @@ jobs:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
-          SENTRY_LOG_LEVEL: debug
         with:
-          environment: production
+          environment: "development"
