--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     },
     "sourceMap": true,
     "inlineSources": true,
-    "sourceRoot": "/"
+    "sourceRoot": "/",
+    "noEmitHelpers": true,
+    "importHelpers": true
   },
   "include": ["src/**/*", "lib/**/*"],
   "compileOnSave": false,
