--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,8 @@ jobs:
           version: 6.0.2
           run_install: true
 
+      - name: Install latest discord.js
+        run: pnpm install discord.js@dev
       - name: Compile code
         run: pnpx tsc -p tsconfig.json
 
