--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "chess.js": "^0.12.0",
     "cookie-parser": "^1.4.5",
     "discord-api-types": "^0.19.0-next.4a83629.1626051438",
-    "discord.js": "^13.0.0-dev.a8984bc.1626048234",
+    "discord.js": "^13.0.0-dev.1dcad05.1626091387",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "graceful-fs": "^4.2.6",
+    "i18next": "^20.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.13.1",
