--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightbulb",
-  "version": "1.42.1",
+  "version": "2.0.0-dev",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
@@ -58,5 +58,8 @@
     "tslib": "^2.3.0",
     "yaml": "^1.10.2"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "imports": {
+    "@lightbulb": "./dist"
+  }
 }
