--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^10.0.0",
     "graceful-fs": "^4.2.6",
     "i18next": "^20.3.2",
+    "i18next-http-backend": "^1.2.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.13.1",
