switch to fixed ctx.t remove errors add hide button for delete components import i18n from /i18n repo update to ts 4.3.5

--- a/etc/config.yml.example
+++ b/etc/config.yml.example
@@ -15,4 +15,4 @@ whitelist:
   -
 
 sentry_dsn:
-i18n_path: # https://raw.githubuserassets.com/lightbulb-bot/i18n/main/{{lng}}/{{ns}}.json
+i18n_path:
