--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "discord-api-types": "^0.19.0-next.4a83629.1626051438",
     "discord.js": "^13.0.0-dev.1dcad05.1626091387",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graceful-fs": "^4.2.6",
     "i18next": "^20.3.2",
     "i18next-http-backend": "^1.2.6",
